Adds menu and css improvements

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
-    <h1>Coming soon.</h1>
-    <h1 id="displayClock">00:00:00</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Coming soon.</h1>
+        <h1 id="displayClock">00:00:00</h1>
+    </main>
 </body>
 
 </html>
