--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
       <h1>Coming soon.</h1>
-      <h1 id="displayClock">00:00:00</h1>
+      <h1 id="displayClock"></h1>
     </main>
     <script src="script.js"></script>
   </body>
